@@ -5,14 +5,16 @@ import bg.softuni.onlinepharmacynews.model.dto.NewsDTO;
 import bg.softuni.onlinepharmacynews.model.entity.News;
 import bg.softuni.onlinepharmacynews.repository.NewsRepository;
 import bg.softuni.onlinepharmacynews.service.NewsService;
+import org.modelmapper.ModelMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.time.Period;
+import java.util.ArrayList;
 import java.util.List;
 
 @Service
@@ -20,10 +22,12 @@ public class NewsServiceImpl implements NewsService {
     private final NewsRepository newsRepository;
     private final Logger LOGGER = LoggerFactory.getLogger(NewsServiceImpl.class);
     private final Period retentionPeriod;
+    private final ModelMapper modelMapper;
 //"${news.retention.period}"
-    public NewsServiceImpl(NewsRepository newsRepository, @Value("${news.retention.period}") Period retentionPeriod) {
+    public NewsServiceImpl(NewsRepository newsRepository, @Value("${news.retention.period}") Period retentionPeriod, ModelMapper modelMapper) {
         this.newsRepository = newsRepository;
         this.retentionPeriod = retentionPeriod;
+        this.modelMapper = modelMapper;
     }
     @Override
     public void createNews(AddNewsDTO addNewsDTO) {
@@ -31,29 +35,21 @@ public class NewsServiceImpl implements NewsService {
 
     }
 
-    private static News map(AddNewsDTO addNewsDTO) {
-        News news = new News();
-        news.setContentBg(addNewsDTO.getContentBg());
-        news.setContentEn(addNewsDTO.getContentEn());
-        news.setTitleBg(addNewsDTO.getTitleBg());
-        news.setTitleEn(addNewsDTO.getTitleEn());
-
-        // todo use model mapper
-        return news;
+    private News map(AddNewsDTO addNewsDTO) {
+        return modelMapper.map(addNewsDTO, News.class);
     }
     @Override
     public List<NewsDTO> getAllNews() {
-        return newsRepository.findAll().stream().map(NewsServiceImpl::map).toList();
+        List<NewsDTO> list = new ArrayList<>();
+        for (News news : newsRepository.findAll()) {
+            NewsDTO map = map(news);
+            list.add(map);
+        }
+        return list;
     }
 
-    private static NewsDTO map(News news) {
-        NewsDTO newsDTO = new NewsDTO();
-        newsDTO.setId(news.getId());
-        newsDTO.setContentBg(news.getContentBg());
-        newsDTO.setContentEn(news.getContentEn());
-        newsDTO.setTitleBg(news.getTitleBg());
-        newsDTO.setTitleEn(news.getTitleEn());
-        return newsDTO;
+    private NewsDTO map(News news) {
+        return modelMapper.map(news, NewsDTO.class);
     }
     @Override
     public void deleteNews(Long id) {
@@ -62,23 +58,33 @@ public class NewsServiceImpl implements NewsService {
 
     @Override
     public NewsDTO getNewsById(Long id) {
-        return newsRepository.findById(id).map(NewsServiceImpl::map).orElseThrow(() -> new IllegalArgumentException("Not found!"));
+        return newsRepository.findById(id).map(this::map).orElseThrow(() -> new IllegalArgumentException("Not found!"));
     }
     @Override
-    public List<NewsDTO> getNewsByTitleContaining(String title) throws UnsupportedEncodingException {
-        String decodedString = URLDecoder.decode(title, "UTF-8");
-        return newsRepository.findByTitleEnContainingIgnoreCaseOrTitleBgContainingIgnoreCase(decodedString, decodedString).stream().map(NewsServiceImpl::map).toList();
+    public List<NewsDTO> getNewsByTitleContaining(String title){
+        String decodedString = URLDecoder.decode(title, StandardCharsets.UTF_8);
+        List<NewsDTO> list = new ArrayList<>();
+        for (News news : newsRepository.findByTitleEnContainingIgnoreCaseOrTitleBgContainingIgnoreCase(decodedString, decodedString)) {
+            NewsDTO map = map(news);
+            list.add(map);
+        }
+        return list;
     }
     @Override
-    public List<NewsDTO> getNewsByTitle(String title) throws UnsupportedEncodingException {
-        String decodedString = URLDecoder.decode(title, "UTF-8").trim();
-        return newsRepository.findByTitleEnEqualsOrTitleBgEquals(decodedString, decodedString).stream().map(NewsServiceImpl::map).toList();
+    public List<NewsDTO> getNewsByTitle(String title){
+        String decodedString = URLDecoder.decode(title, StandardCharsets.UTF_8).trim();
+        List<NewsDTO> list = new ArrayList<>();
+        for (News news : newsRepository.findByTitleEnEqualsOrTitleBgEquals(decodedString, decodedString)) {
+            NewsDTO map = map(news);
+            list.add(map);
+        }
+        return list;
     }
     @Override
     public void cleanupOldNews() {
         Instant now = Instant.now();
         Instant deleteBefore = now.minus(retentionPeriod);
-        LOGGER.info("Removing all news older than " + deleteBefore);
+        LOGGER.info("Removing all news older than {}", deleteBefore);
         newsRepository.deleteOldOffers(deleteBefore);
         LOGGER.info("Old news were removed");
     }
